# BMI270_SensorAPI

./: CMakeLists.txt  component.mk
bmi270_examples/common/: common.c
